first usable commit

--- a/.gitignore
+++ b/.gitignore
@@ -243,3 +243,10 @@ ModelManifest.xml
 
 # FAKE - F# Make
 .fake/
+**/wwwroot/lib
+lib.min.css
+app.min.css
+**/wwwroot/typings
+*.js
+*.js.map
+appsettings.*.json
